# heavy-machinery-os

./: .gitignore  README.md  main.py  pyproject.toml  run_etl_local.py
data/: raw_data.json  schema.sql  walkia_master.db
scripts/: generate_raw_data.py
src/: cli_dashboard.py  database.py
src/api/: README.md  main.py
src/models/: domain.py  machinery.py
src/services/: cleaner.py
