[project]
name = "walkia-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diagrams>=0.25.1",
    "fastapi>=0.135.3",
    "sqlmodel>=0.0.38",
    "tabulate>=0.10.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
